public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/197/source/compile
source.c: In function ‘main’:
source.c:6:9: error: expected expression before ‘{’ token
  hari = {Kamis, Jumat, Sabtu, Minggu, Senin, Selasa, Rabu};
         ^
